@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=2
 PKG_MINOR=9
-PKG_REVISION=5
+PKG_REVISION=6
 PKG_BUILD=1
