@@ -1,4 +1,8 @@
-xfsprogs-2.9.5 (21 Jan 2007)
+xfsprogs-2.9.6 (7 Feb 2008)
+	- Fix regression introduced by changing the mkfs.xfs defaults.
+	- Made lazy superblock counters the default with mkfs.xfs.
+
+xfsprogs-2.9.5 (21 Jan 2008)
 	- Updated mkfs.xfs defaults.
 	- Make xfs_info handle mount points with spaces.
 	- Improve xfs_repair's handling of invalid freespace btree extents.
